# rust_webservice_template

./: Cargo.toml
benches/: service.rs
docker/: start.sh
migrations/2020-04-01-151111_create_tickets/: down.sql  up.sql
src/: db_actions.rs  main.rs  schema.rs
src/data/: mod.rs
src/handlers/: mod.rs
src/logging/: mod.rs
src/models/: mod.rs
