[package]
name = "api-service"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1"
reqwest = "0.10.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^0.2", features = ["full"] }
futures = "^0.3"
failure = "^0.1"
async-std = "^1.5"

slog = "^2"
slog-term = "^2"
slog-async = "^2"
